[workspace]
exclude = ["ci/configs/", "wasmvm/libwasmvm"]
members = [
  "contracts/cw-tokenfactory-issuer",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/DA0-DA0/dao-contracts"
version = "2.4.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
panic = 'abort'
rpath = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true

[workspace.dependencies]
anyhow = { version = "1.0" }
assert_matches = "1.5"
cosm-orc = { version = "4.0" }
cosm-tome = "0.2"
cosmos-sdk-proto = "0.19"
cosmwasm-schema = { version = "1.2" }
cosmwasm-std = { version = "1.5.0", features = ["ibc3"] }
cw-controllers = "1.1"
cw-multi-test = "0.18"
cw-storage-plus = { version = "1.1" }
cw-utils = "1.0"
cw2 = "1.1"
cw20 = "1.1"
cw20-base = "1.1"
cw3 = "1.1"
cw4 = "1.1"
cw4-group = "1.1"
cw721 = "0.18"
cw721-base = "0.18"
env_logger = "0.10"
once_cell = "1.18"
osmosis-std = "0.20.1"
osmosis-std-derive = "0.20.1"
osmosis-test-tube = "20.1.1"
proc-macro2 = "1.0"
prost = { version = "0.12.3", features = ["prost-derive"] }
prost-types = { version = "0.12.3", default-features = false }
quote = "1.0"
rand = "0.8"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-cw-value = "0.7"
serde_json = "1.0"
serde_yaml = "0.9"
sg-multi-test = "3.1.0"
sg-std = "3.1.0"
sg721 = "3.1.0"
sg721-base = "3.1.0"
syn = { version = "1.0", features = ["derive"] }
test-context = "0.1"
thiserror = { version = "1.0" }
wynd-utils = "0.4"

# One commit ahead of version 0.3.0. Allows initialization with an
# optional owner.
cw-ownable = "0.5"

cw-tokenfactory-issuer = { path = "./contracts/external/cw-tokenfactory-issuer", version = "2.4.0" }
cw-tokenfactory-types = { path = "./packages/cw-tokenfactory-types", version = "2.4.0", default-features = false }

# v1 dependencies. used for state migrations.
cw-core-v1 = { package = "cw-core", version = "0.1.0" }
cw-proposal-single-v1 = { package = "cw-proposal-single", version = "0.1.0" }
cw-utils-v1 = { package = "cw-utils", version = "0.13" }
cw20-stake-external-rewards-v1 = { package = "stake-cw20-external-rewards", version = "0.2.6" }
cw20-stake-reward-distributor-v1 = { package = "stake-cw20-reward-distributor", version = "0.1.0" }
cw20-stake-v1 = { package = "cw20-stake", version = "0.2.6" }
cw20-staked-balance-voting-v1 = { package = "cw20-staked-balance-voting", version = "0.1.0" }
cw4-voting-v1 = { package = "cw4-voting", version = "0.1.0" }
stake-cw20-v03 = { package = "stake-cw20", version = "0.2.6" }
voting-v1 = { package = "dao-voting", version = "0.1.0" }
